[package]
name = "ct"
version = "0.1.0"
authors = ["veto"]
edition = "2024"
rust-version = "1.94.1 "


[dependencies]
ct_nox = { path = "./ct_nox"}
eframe = "*"
egui_extras = "*"
rfd = "*"
cli-clipboard = "*" 
i18n-embed = { version = "*", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "*" 
log = "*"
env_logger = "*"
rust-embed = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = {version ="*"}
homedir = {version ="*"}

[build-dependencies]
i18n-embed = "*"

#[lib]
#name = "libs"
#path = "src/lib.rs"


[workspace]
resolver = "2"
members = [
    "ct_nox",
]

